# SkateFormer

./: .gitignore  Dockerfile  main.py  pyproject.toml
config/test/kinetics_coco/: SkateFormer_b_cloud.yaml  SkateFormer_bm_cloud.yaml  SkateFormer_j.yaml  SkateFormer_j_cloud.yaml  SkateFormer_jm_cloud.yaml
config/train/kinetics_coco/: SkateFormer_b.yaml  SkateFormer_b_cloud.yaml  SkateFormer_b_hrnet.yaml  SkateFormer_bm.yaml  SkateFormer_bm_cloud.yaml  SkateFormer_bm_hrnet.yaml  SkateFormer_j copy.yaml  SkateFormer_j.yaml  SkateFormer_j_cloud.yaml  SkateFormer_j_hrnet.yaml  SkateFormer_jm.yaml  SkateFormer_jm_cloud.yaml  SkateFormer_jm_hrnet.yaml
data/ntu/: get_raw_denoised_data.py  get_raw_skes_data.py  seq_transformation.py
data/ntu120/: get_raw_skes_data.py  seq_transformation.py
feeders/: __init__.py  feeder_kinetics_coco.py  feeder_ntu.py  feeder_ntu_inter.py  feeder_ucla.py  tools.py
model/: SkateFormer.py
torchlight/: __init__.py  setup.py
torchlight/torchlight/: gpu.py  util.py
