[project]
name = "skateformer"
version = "0.0.0"
description = "SkateFormer training codebase (ECCV 2024) with uv-managed dependencies."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
	"einops>=0.8",
	"loguru>=0.7",
	"matplotlib>=3.9",
	"msgpack>=1.0",
	"msgpack-numpy>=0.4",
	"multimethod>=1.12",
	"numpy>=1.26",
	"pyyaml>=6.0",
	"tabulate>=0.9",
	"tensorboard>=2.18",
	"tensorboardx>=2.6",
	"tensorpack>=0.11",
	"tqdm>=4.66",
	"safetensors>=0.4",
	"h5py>=3.10",
	"scipy>=1.13",
	"scikit-learn>=1.5",
]

[project.optional-dependencies]
torch = [
	"torch>=2.8.0,<2.9.0",
	"torchvision>=0.23.0,<0.24.0",
	"torchaudio>=2.8.0,<2.9.0",
]
depend-torch = ["torchpack>=0.2.2,<0.3", "timm>=1.0"]


[dependency-groups]
dev = ["ruff>=0.8", "pyright>=1.1.390", "pytest>=8.3"]

[tool.uv]
# This repo is a training codebase; we don't need to build/install it as a package.
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
	".venv",
	"venv",
	"build",
	"dist",
	"__pycache__",
	"*.pyc",
	".git",
	"st-gcn",
	"skateformer",
]

[tool.ruff.lint]
select = [
	"ANN",   # missing type annotations
	"E",     # pycodestyle errors
	"W",     # pycodestyle warnings
	"F",     # pyflakes
	"I",     # isort
	"C",     # flake8-comprehensions
	"B",     # flake8-bugbear
	"PLR09", # ruff-provided rules
	"N",     # naming conventions
	"PLW",   # ruff-provided warnings
	"UP",    # pyupgrade
	"SIM",   # flake8-simplify
]
ignore = [
	"E501", # line too long (handled by formatter)
	"E402", # module level import not at top of file
	"I001", # isort import order
	"W293", # blank line contains whitespace
	"B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__ files

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = ["st-gcn", "SkateFormer", ".venv", "venv", "build", "dist"]
